--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "sass": "^1.70.0",
     "sass-loader": "^14.0.0",
     "vue": "^3.3.11",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vite":"^5.0.8"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
