--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,14 +1,7 @@
 # Используйте официальный образ Node.js
 FROM node:latest
 
-# Установка MongoDB
-RUN apt-get update && \
-    apt-get install -y gnupg && \
-    wget -qO - https://www.mongodb.org/static/pgp/server-5.0.asc | apt-key add - && \
-    echo "deb http://repo.mongodb.org/apt/debian buster/mongodb-org/5.0 main" | tee /etc/apt/sources.list.d/mongodb-org-5.0.list && \
-    apt-get update && \
-    apt-get install -y mongodb-org && \
-    rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y mongodb
 
 # Установите рабочую директорию в контейнере
 WORKDIR /usr/src/app
