--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "start": "serve dist -s"
   },
   "dependencies": {
-    "mongoose": "^8.1.0",
     "sass": "^1.70.0",
     "sass-loader": "^14.0.0",
     "serve": "^14.2.1",
@@ -22,7 +21,6 @@
     "@vitejs/plugin-vue": "^4.5.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
-    "vue-tsc": "^1.8.25",
-    "@rollup/rollup-linux-x64-gnu": "4.6.1"
+    "vue-tsc": "^1.8.25"
   }
 }
