--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongodb": "^6.3.0",
-    "mongoose": "^8.1.0"
+    "redis": "^4.6.13"
   }
 }
